# OlderProjects

./: README.md
ChinaTelecomCodes/: CMakeLists.txt  ChinaTest.py  DrawTerminal.cpp  DrawTerminal.h  FPtree.cpp  FPtree.h  MainTerminal.cpp  MainTerminal.h  PRtree.cpp  PRtree.h  Readme.txt  UVPVwidget.ui  UV_PV.cpp  UV_PV.h  apriori.cpp  apriori.h  cityDistWindow.cpp  cityDistWindow.h  data.cpp  data.h  database.cpp  database.h  drawidget.cpp  drawidget.h  legend.cpp  main.cpp  mainterminal.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newTerminal.cpp  newterminal.h  plot.cpp  plot.h  processbar.cpp  processbar.h  processbar.ui  quotefactory.cpp  quotefactory.h  showtable.cpp  (+20 more)
ChinaTelecomCodes/lib/: zlibstat.lib
TrackAndReconstruct/: CMakeLists.txt  Readme.txt
TrackAndReconstruct/3rd/CGAL-4.5/include/CGAL/: jet_smooth_point_set.h  property_map.h
TrackAndReconstruct/3rd/CGAL-4.5/lib/: CGAL-vc120-mt-gd-4.5.lib  CGAL_Core-vc120-mt-gd-4.5.lib  CGAL_ImageIO-vc120-mt-gd-4.5.lib
TrackAndReconstruct/3rd/SSBA-3.0/Apps/: CMakeLists.txt
TrackAndReconstruct/3rd/SSBA-3.0/COLAMD/: CMakeLists.txt
TrackAndReconstruct/3rd/SSBA-3.0/Config/: local_config.cmake.windows_x86
TrackAndReconstruct/3rd/SSBA-3.0/Math/: win32config.h
TrackAndReconstruct/3rd/SSBA-3.0/SuiteSparse_config/: CMakeLists.txt
TrackAndReconstruct/CommonDS/: CMakeLists.txt  CalibrateParameters.cpp  CalibrateParameters.h  Edge.h  MathAction.cpp  MathAction.h  Matrix.h  MatrixGao.cpp  MatrixGao.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  SpotMath.cpp  SpotMath.h
TrackAndReconstruct/ReconstructLib/: CMakeLists.txt  adaptiveweight.cpp  adaptiveweight.hpp  camera.cpp  camera.hpp  geodesicweight.cpp  geodesicweight.hpp  linalg.hpp  lineiter.cpp  lineiter.hpp  multiviewstereo.cpp  multiviewstereo.hpp  plane.cpp  plane.hpp  ray.cpp  ray.hpp  rectification.cpp  rectification.hpp  surfel.cpp  surfel.h  twoviewstereo.cpp  twoviewstereo.hpp  vectorimage.cpp  vectorimage.hpp
TrackAndReconstruct/TrackAndReconstruct/: CMakeLists.txt  main.cpp  readAndRun.hpp
TrackAndReconstruct/TrackCameraLib/: BundleAdjuster.cpp  BundleAdjuster.h  CMakeLists.txt  FindCameraMatrices.cpp  FindCameraMatrices.h  MultiCameraDistance.cpp  MultiCameraDistance.h  MultiCameraPnP.cpp  MultiCameraPnP.h  RichFeatureMatcher.cpp  RichFeatureMatcher.h  Triangulation.cpp  Triangulation.h  data.cpp  data.h
TrackAndReconstruct/TrackSensor/: fusion.hpp  xmlReader.hpp
TrackAndReconstruct/test/: CMakeLists.txt  test.cpp
paperCode/: CMakeLists.txt  OpenDTAM.hpp  convertAhandaPovRayToStandard.h  fileLoader.cpp  graphics.cpp  main.cpp  main_CostVolumn.cpp  main_depth.cpp  main_test.cpp  removeBoard.m  set_affinity.h  showcamera.m  testprog.cpp  tictoc.h
paperCode/CostVolume/: CostVolume.cpp  CostVolume.cuh  optimizer.part.cpp
paperCode/CostVolume/utils/: reprojectCloud.cpp
paperCode/DepthmapDenoiseWeightedHuber/: DepthmapDenoiseWeightedHuber.cuh  DepthmapDenoiseWeightedHuber.hpp
paperCode/KeyframeSelection/: CMakeLists.txt  frameParams.cpp  frameParams.h
paperCode/Optimizer/: Optimizer.cuh
paperCode/Scheduler/: CMakeLists.txt  Frame.hpp  ImplMutex.hpp
paperCode/Track/: Align_part.cpp
paperCode/UpdateVolumn/: CMakeLists.txt  updateCostVolumn.cpp  updateCostVolumn.h
paperCode/capgSensor/: CMakeLists.txt  channel.h  frames.h  node.cpp  node.h  release_assert.hpp  sensor_session.cpp  sensor_session.h
paperCode/depthToModel/: CMakeLists.txt  depthToModel.cpp  depthToModel.h
paperCode/external_includes/: opencvincludes.h  openglincludes.h  stlincludes.h
paperCode/imu2cam/: CMakeLists.txt  imu2cam.cpp  imu2cam.h
paperCode/mainFunction/: CMakeLists.txt  main.cpp
paperCode/sensorFusion/: CMakeLists.txt  MahonyAHRS.cpp  MahonyAHRS.h  fusion.cpp  fusion.h
paperCode/stereoMatch/: CMakeLists.txt  CameraParam.cpp  CameraParam.h  ImageProcess.h  PixelMatching.cpp  PixelMatching.h  Triangulation.h  defines.h  main.cpp  matrix.cpp  matrix.h  ply.h  types.h  vector.c  vector.h
paperCode/thirdparty_includes/TooN/internal/: config.hh
paperCode/thirdparty_includes/cvd/: config.h
paperCode/utils/: CMakeLists.txt  ImplThreadLaunch.hpp
relightingv1.0/: CMakeLists.txt  CMakeLists_ALL.txt  GLWidget.cpp  GLWidget.h  InputDialog.h  Readme.txt  data.cpp  data.h  environmentwidget.cpp  environmentwidget.h  glm.cpp  glm.h  inputDialog.cpp  lightwidget.cpp  lightwidget.h  main.cpp  mainGLWidget.cpp  mainGLWidget.h  mainwin.cpp  mainwin.h  mainwin.ui  model.cpp  model.h  objdata.cpp  objdata.h
relightingv1.0/RelightingLine/: CMakeLists.txt  CMakeLists_ALL.txt  estimate.cpp  estimate.h  maincpp.cpp  ply.cpp  ply.h  testlight.txt  vectorimage.cpp
relightingv1.0/RelightingLine/testdataset/: buddha.ply  cat.ply  gray.ply  horse.ply
relightingv1.0/img/: 0001tmp.ply
relightingv1.0/testdataset/: __TMP.vmi  __TMPbuddha.ply.vmi  groundtrues.txt  owl.ply
